<resources xmlns:cc="http://strings_namespace">
    <string name="title_bar_name">@string/application_name</string>
    <string name="PostURL" translatable="false">https://staging.commcarehq.org/receiver/submit/pf</string>
    <string name="ota_restore_url" translatable="false">https://staging.commcarehq.org/ota_restore</string>
    <string name="your_comment">Your comment</string>
    <string name="support_email_address_default">commcarehq-support@dimagi.com</string>
    <string name="manager_activity_name">App Manager</string>
    <string name="install_app">Install an App</string>
    <string name="uninstall_app">Uninstall</string>
    <string name="archive_app">Archive</string>
    <string name="unarchive_app">Unarchive</string>
    <string name="update_app">Update</string>
    <string name="update_canceled">Your update was paused</string>
    <string name="verify_resources">Validate Multimedia</string>
    <string name="skip_button_text">Skip For Now</string>
    <string name="retry_button_text">Retry</string>
    <string name="skipped_verification_warning">You did not validate multimedia resources for the app that was just
         installed! This app will not be visible to users on the log-in screen until multimedia is validated.</string>
    <string name="skipped_verification_warning_2">You did not validate multimedia resources for this app! The app will
        not be visible to users on the log-in screen until multimedia is validated.</string>
    <string name="manager_instructions">Select an app to view its management options, or install a new app.</string>
    <string name="pre_multiple_apps_warning">Warning: The app you have installed is from an outdated build.
        For full functionality of multiple application seating, please make a new build of your app.</string>
    <string name="uninstall_reboot_warning">CommCare will uninstall your app and then reboot to save changes.</string>
    <string name="logout_warning">In order to complete this action, CommCare must log out the currently logged-in app. Do you want to proceed?</string>
    <string name="logging_out">Logging out your app</string>
    <string name="uninstalling">Uninstalling your app</string>
    <string name="media_not_verified">Media Not Verified</string>
    <string name="media_verified">Media Validated!</string>
    <string name="no_installation">No app was installed!</string>
    <string name="migration_definite_failure">CommCare was unable to migrate your app data for an upgrade. To resolve this issue, please uninstall CommCare from your device and then relaunch it.</string>
    <string name="migration_possible_failure">CommCare was unable to migrate all of your data during an application upgrade. Please restart CommCare to try to fix this. If this message persists, you may need to \'Clear data\' for CommCare in your device\'s Settings menu.</string>
    <string name="migration_failure_title">Migration Error</string>
    <string name="multiple_apps_limit_message">You have reached your limit of installed apps; you may only have up to %s apps installed at once.\n\nIf you would like to install a new app, you may uninstall an existing app first, which can be done from the app manager.</string>
    <string name="back_to_manager">Back to App Manager</string>
    <string name="go_to_manager">Go to App Manager</string>
    <string name="claim_privilege_button_text">CLAIM PRIVILEGES</string>
    <string name="privilege_enabled_text">The following privileges are enabled on your device:\n\n %s</string>
    <string name="privilege_not_enabled_text">Special privileges are not enabled on your device.</string>
    <string name="privilege_claim_failed">Could not claim privileges</string>
    <string name="privilege_claim_bad_version">Didn\'t recognize the privilege activation code. Please update CommCare</string>
    <string name="privilege_instructions">If you have a superuser account on HQ, you can enable certain privileges on your device by going to the \'Enable Privileges on Mobile\' tab of your \'My Account Settings\' page, and then scanning the barcode that appears there.</string>
    <string name="see_available_apps">See Available Apps</string>
    <string name="install_from_list_prompt">Log in as a mobile or web user to see a list of apps you can install</string>
    <string name="legacy_failure">CommCare does not support upgrading from the previous CommCare version you were using. To resolve this issue, please uninstall CommCare from your device and then reinstall it.</string>
    <string name="legacy_failure_title">Incompatible CommCare Upgrade</string>
    <string name="app_version_string">version.id.long</string>
    <string name="session_notification_title">Logged Into Commcare</string>
    <string name="session_expire_notification">CommCare Login Expired</string>
    <string name="submission_notification_title">Submitting Data</string>
    <string name="submission_logs_title">Submitting CommCare Logs</string>
    <string name="remote_form_payload_url" />
    <string name="about_dialog" formatted="false" cc:translatable="true">%s\n\n_Copyright 2016, Dimagi inc, All rights reserved_ \n\n---------------- \n\n__Acknowledgements:__ \n\n%sSome images in CommCare are graciously used under Creative Commons Licensing from thenounproject.com collection:\n\n* “Door” symbol by Tak Imoto \n* “Pencil” symbol by Creologica \n* “Notebook” symbol by Carlo \n* “Antenna” symbol by Dima \n* “Map Marker” symbol by P.J. Onori \n* "List" by Landan Lloyd \n* broken screen by Sam Martin from the Noun Project \n\n

</string>
    <string name="hello_world">Please enter your issues below</string>
    <string name="menu_settings">Settings</string>
    <string name="permission_content_provider_label">Read Secure CommCare Data</string>
    <string name="permission_content_provider_description">Allows this app to read data from CommCare while a user is logged in</string>
    <string name="permission_external_action_label">Allow CommCare Actions</string>
    <string name="permission_external_action_description">Allows this app to trigger operations like login, logout and sync in CommCare</string>
    <string name="permission_commcare_logout_label">Allow Auto CommCare Logout</string>
    <string name="permission_commcare_logout_description">Allows this app to logout a user from CommmCare App</string>
    <string name="permission_protect_falsely_exposed_components_label">Protect internal components</string>
    <string name="permission_protect_falsely_exposed_components_description">Restricts external apps from accessing internal components</string>
    <string name="permission_group_internal_action_label">Permission group for CommCare Internal Actions</string>
    <string name="title_activity_report_problem">Report Problem</string>
    <string name="panes">one</string>
    <string name="restore_session_prompt">Restore saved session upon login</string>
    <string name="managed_configuration_username">Mobile Worker Username</string>
    <string name="managed_configuration_password">Mobile Worker Password</string>
    <string name="managed_configuration_profile_url">CommCare App Link</string>
    <string name="managed_configuration_username_description">The username of the CommCare mobile worker to login and restore on the device</string>
    <string name="managed_configuration_password_description">The password of the mobile user</string>
    <string name="managed_configuration_profile_url_description">The URL to your CommCare Application from the CommCareHQ publish page</string>
    <string name="about_cc" cc:translatable="true">About CommCare</string>
    <string name="accept_location" cc:translatable="true">Record Location</string>
    <string name="install_barcode_top">Welcome to CommCare!</string>
    <string name="install_barcode_bottom">Please choose an installation method below</string>
    <string name="install_keep_trying">Keep trying if connection is interrupted</string>
    <string name="install_manual">Please enter the URL</string>
    <string name="install_ready_top">Almost there!</string>
    <string name="install_ready_bottom">Press the button below to install your app.</string>
    <string name="install_netwarn">If you are attempting to install from a server, make sure you have an internet connection.</string>
    <string name="install_button_enter">Enter Code</string>
    <string name="install_button_startover">Start Over</string>
    <string name="install_button_retry">Retry Installation</string>
    <string name="install_button_start">Start Install</string>
    <string name="install_bad_ref">You did not scan a valid URL. Please try again.</string>
    <string name="install_bad_login">Login to Existing App</string>
    <string name="install_appprofile">Enter your app code</string>
    <string name="install_perms_rationale_message">CommCare requires at least external storage read &amp; write permissions in order to store form submissions.</string>
    <string name="install_perms_denied_message">Crucial permissions denied %1$s times.\n\n If requesting permissions here fails, please enable permissions under Android\'s settings.</string>
    <string name="install_choose_local_app">Available Apps</string>
    <string name="install_wrong_code">The app code you have entered is incorrect. Please try scanning barcode or entering correct code.</string>
    <string name="install_invalid_launch">Invalid CommCare launch, External applications should use a VIEW action to launch CommCare.</string>
    <string name="menu_archive">Offline Install</string>
    <string name="menu_sms">SMS Install</string>
    <string name="menu_sms_not_found">Install link not found in your texts!</string>
    <string name="menu_sms_ready">Found install link. Press \"Start\" to begin installation.</string>
    <string name="menu_sms_not_verified">We found a valid looking text, but could not verify its authenticity.</string>
    <string name="cancel" cc:translatable="true">CANCEL</string>
    <string name="please_wait_long" cc:translatable="true">Please wait. This could take a few minutes.</string>
    <string name="go_to_location" cc:translatable="true">Go to Location</string>
    <string name="font_size" cc:translatable="true">Text Font Size</string>
    <string name="change_font_size" cc:translatable="true">Text Font Size</string>
    <string name="preference_help_mode_tray" cc:translatable="true">Display Rich Help Inline</string>
    <string name="personalid_choice_or">___________    OR    ___________</string>
    <string name="connect_verify_title">Unlock Options</string>
    <string name="connect_verify_message">Please configure a method below to unlock both your device and PersonalID account</string>
    <string name="connect_verify_configure_fingerprint">Configure Fingerprint</string>
    <string name="connect_verify_configure_pin">Configure PIN</string>
    <string name="personalid_profile_section_personal_information">Personal Information</string>
    <string name="personalid_profile_field_name">Name</string>
    <string name="personalid_profile_field_phone">Phone Number</string>
    <string name="personalid_profile_field_email">Email Address</string>
    <string name="personalid_profile_forget_account">Forget PersonalID Account</string>
    <string name="connect_delivery_start">Start</string>
    <string name="connect_delivery_continue_visits">Continue your visits</string>
    <string name="connect_delivery_continue_visits_subtitle">Submit delivery forms</string>
    <string name="personalid_photo_capture_title">Welcome %1$s</string>
    <string name="personalid_photo_capture_subtitle">Please take a photo of yourself to complete your account setup</string>
    <string name="personalid_photo_capture_take_photo_button">Take Photo</string>
    <string name="personalid_photo_capture_save_photo_button">Save Photo</string>
    <string name="personalid_profile_change_backup_code">Change backup code</string>
</resources>