<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:id="@+id/location_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/translucent_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dip">


        <TextView
            android:id="@+id/location_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_wait_long"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="2dip"
            android:paddingTop="2dip">

            <org.commcare.activities.components.RoundedButton
                android:id="@+id/show_location"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/go_to_location"
                android:visibility="gone"
                app:roundButtonBackgroundColor="@color/primary_button_background"
                app:roundButtonTextColor="@color/white"/>

            <org.commcare.activities.components.RoundedButton
                android:id="@+id/accept_location"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/accept_location"
                app:roundButtonBackgroundColor="@color/primary_button_background"
                app:roundButtonTextColor="@color/white"/>

            <org.commcare.activities.components.RoundedButton
                android:id="@+id/cancel_location"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                app:roundButtonBackgroundColor="@color/primary_button_background"
                app:roundButtonTextColor="@color/white"/>
        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"/>
    </LinearLayout>

    <ImageView
        android:layout_margin="@dimen/map_layer_margin"
        android:padding="@dimen/map_layer_padding"
        android:layout_alignEnd="@id/location_buttons"
        android:layout_alignRight="@id/location_buttons"
        android:layout_alignBottom="@id/location_buttons"
        android:id="@+id/switch_layer"
        android:layout_height="36dp"
        android:layout_width="36dp"
        android:background="@color/map_layer_button_color"
        app:srcCompat="@drawable/ic_layers" />
</RelativeLayout>