<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/connect_verify_title"
                style="@style/Widget.Connect.HeadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/connect_space_lg"
                android:layout_marginTop="@dimen/connect_space_xl"
                android:text="@string/connect_verify_title" />

            <TextView
                android:id="@+id/connect_verify_message"
                style="@style/Widget.Connect.BodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/connect_space_lg"
                android:layout_marginTop="@dimen/connect_space_sm"
                android:text="@string/connect_verify_message" />

            <LinearLayout
                android:id="@+id/connect_verify_fingerprint_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/connect_space_xl"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/connect_verify_fingerprint_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_fingerprint_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/connect_verify_fingerprint_button"
                    style="@style/ConnectPrimaryButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/connect_space_lg"
                    android:layout_marginTop="@dimen/connect_space_xl"
                    android:text="@string/connect_verify_configure_fingerprint" />

            </LinearLayout>

            <TextView
                android:textStyle="bold"
                android:id="@+id/connect_verify_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/content_min_margin"
                android:text="@string/personalid_choice_or"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:id="@+id/connect_verify_pin_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/connect_space_md"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/connect_verify_pin_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_pattern_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/connect_verify_pin_button"
                    style="@style/ConnectPrimaryButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/connect_space_lg"
                    android:layout_marginTop="@dimen/connect_space_xl"
                    android:text="@string/connect_verify_configure_pin" />

                <TextView
                    android:id="@+id/error_text_view"
                    style="@style/Widget.Connect.ErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/connect_space_lg"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
