<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/Widget.Connect.HeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/connect_space_lg"
            android:layout_marginTop="@dimen/connect_space_xl"
            android:text="@string/personalid_photo_capture_title" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/Widget.Connect.BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginHorizontal="@dimen/connect_space_lg"
            android:layout_marginTop="@dimen/connect_space_sm"
            android:text="@string/personalid_photo_capture_subtitle" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo_image_view"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/connect_space_xl"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_personalid_avatar_placeholder"
            app:shapeAppearanceOverlay="@style/personalIdCircleImageView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginEnd="@dimen/connect_space_lg"
            android:layout_marginStart="@dimen/connect_space_lg"
            >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/take_photo_button"
            style="@style/ConnectPrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/spacer_small"
            android:text="@string/personalid_photo_capture_take_photo_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_photo_button"
            style="@style/ConnectPrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:layout_marginStart="@dimen/spacer_small"
            android:text="@string/personalid_photo_capture_save_photo_button" />
        </LinearLayout>
        <TextView
            android:id="@+id/errorTextView"
            style="@style/Widget.Connect.ErrorText"
            tools:text="Error uploading photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/connect_space_lg"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
    </LinearLayout>

</layout>
